include_directories(${PROJECT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_library(planning_lib
  planning.cc
  planning.h)
target_link_libraries(planning_lib
  on_lane_planning
  util
  jmc_auto_app
  message_util
  adapter_gflags
  /modules/localization/proto:localization_proto
  /modules/map/relative_map/proto:navigation_proto
  /modules/perception/proto:perception_proto
  history
  planning_proto
  /modules/prediction/proto:prediction_proto
  ros//:ros_common)
add_library(planning_base
  planning_base.cc
  planning_base.h)
target_link_libraries(planning_base
  util
  log
  config_gflags
  quaternion
  pnc_point_proto
  future
  message_util
  vehicle_state_provider
  /modules/localization/proto:localization_proto
  /modules/map/hdmap:hdmap_util
  /modules/perception/proto:perception_proto
  history
  planning_common
  planning_gflags
  trajectory_stitcher
  smoother
  util_lib
  /modules/planning/planner
  planner_dispatcher
  planning_proto
  traffic_rule_config_proto
  /modules/planning/tasks:task_factory
  /modules/planning/traffic_rules:traffic_decider
  /modules/prediction/proto:prediction_proto)
add_library(on_lane_planning
  on_lane_planning.cc
  on_lane_planning.h)
target_link_libraries(on_lane_planning
  planning_base
  planning_thread_pool)


