include_directories(${PROJECT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_library(canbus_proto
  canbus_conf.pb.cc
  canbus_conf.pb.h
  ch.pb.cc
  ch.pb.h
  chassis.pb.cc
  chassis.pb.h
  chassis_detail.pb.cc
  chassis_detail.pb.h
  cx75.pb.cc
  cx75.pb.h
  teshun.pb.cc
  teshun.pb.h
  vehicle_chassis.pb.cc
  vehicle_chassis.pb.h
  vehicle_parameter.pb.cc
  vehicle_parameter.pb.h)
target_link_libraries(canbus_proto
  ${COMMON_LIB}
  common_proto
  drive_state_proto
  header_proto
  vehicle_signal_proto
  protobuf)