include_directories(.)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(cx75)

add_library(vehicle_controller_base
  vehicle_controller.cc
  vehicle_controller.h)
target_link_libraries(vehicle_controller_base
  canbus_proto
  vehicle_config_helper
  error_code_proto
  control_proto
  can_client
  can_sender
  message_manager_base
  canbus_common)
add_library(abstract_vehicle_factory
  abstract_vehicle_factory.cc
  abstract_vehicle_factory.h)
target_link_libraries(abstract_vehicle_factory
  canbus_proto
  vehicle_controller_base
  message_manager_base
  canbus_common)
add_library(vehicle_factory
  vehicle_factory.cc
  vehicle_factory.h)
target_link_libraries(vehicle_factory
  #ch_vehicle_factory
  #teshun_vehicle_factory
  cx75_vehicle_factory
  factory)